메모 포스트잇으로 수정, main 좌우 토글 기능 추가

--- a/public/main.html
+++ b/public/main.html
@@ -321,6 +321,15 @@
 
       <!-- 중앙 지도 영역 -->
       <main class="map-container">
+        <!-- 왼쪽 패널 토글 버튼 -->
+        <button class="toggle-btn toggle-left" id="toggle-left-btn" title="왼쪽 패널 토글">
+          ◀
+        </button>
+
+        <!-- 오른쪽 패널 토글 버튼 -->
+        <button class="toggle-btn toggle-right" id="toggle-right-btn" title="오른쪽 패널 토글">
+          ▶
+        </button>
         <div class="map-toolbar">
           <button class="tool-btn active" title="이동">🖐️</button>
           <button class="tool-btn" title="메모 작성">✏️</button>
