버튼 수정 및 화상채팅 css 추가

--- a/public/main.html
+++ b/public/main.html
@@ -330,6 +330,7 @@
         <button class="toggle-btn toggle-right" id="toggle-right-btn" title="오른쪽 패널 토글">
           ▶
         </button>
+
         <div class="map-toolbar">
           <button class="tool-btn active" title="이동">🖐️</button>
           <button class="tool-btn" title="메모 작성">✏️</button>
@@ -409,6 +410,7 @@
                   style="
                     grid-column: 1 / -1;
                     text-align: center;
+                    align-content: center;
                     padding: 60px 20px;
                     color: white;
                     background: #334155;
