버킷리스트 브랜치에 커밋

--- a/public/bucketlist.html
+++ b/public/bucketlist.html
@@ -3,294 +3,109 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>버킷리스트 - TripCanvas</title>
     <link rel="stylesheet" href="./styles/bucketlist.css" />
-    <style></style>
   </head>
   <body>
-    <!-- 네비게이션 -->
     <div id="navbar"></div>
-
     <script type="module">
       import { loadNavbar } from "./js/navbar.js";
       loadNavbar();
     </script>
 
-    <!-- 메인 컨텐츠 -->
     <div class="container">
-      <!-- 헤더 -->
       <div class="page-header">
-        <h1 class="page-title">🎯 나의 버킷리스트</h1>
+        <h1 class="page-title">나의 버킷리스트</h1>
         <p class="page-subtitle">
-          여행 목표를 설정하고 달성해보세요. AI가 목표에 맞는 장소를 우선
-          추천해드립니다.
+          진행률과 상태를 한눈에 보고 관리하세요. 카드에서 바로 상세를 열어
+          체크리스트를 업데이트할 수 있습니다.
         </p>
       </div>
 
-      <!-- 통계 -->
       <div class="stats-row">
         <div class="stat-card">
-          <div class="stat-icon">🎯</div>
-          <div class="stat-value">12</div>
-          <div class="stat-label">전체 챌린지</div>
+          <div class="stat-icon">🗂️</div>
+          <div class="stat-value" id="statTotal">0</div>
+          <div class="stat-label">전체</div>
         </div>
         <div class="stat-card">
-          <div class="stat-icon">✅</div>
-          <div class="stat-value">7</div>
+          <div class="stat-icon">🚧</div>
+          <div class="stat-value" id="statActive">0</div>
+          <div class="stat-label">진행</div>
+        </div>
+        <div class="stat-card">
+          <div class="stat-icon">🏁</div>
+          <div class="stat-value" id="statCompleted">0</div>
           <div class="stat-label">완료</div>
         </div>
         <div class="stat-card">
-          <div class="stat-icon">🔥</div>
-          <div class="stat-value">5</div>
-          <div class="stat-label">진행 중</div>
-        </div>
-        <div class="stat-card">
           <div class="stat-icon">📈</div>
-          <div class="stat-value">58%</div>
-          <div class="stat-label">평균 달성률</div>
+          <div class="stat-value" id="statRate">0%</div>
+          <div class="stat-label">완성률</div>
         </div>
       </div>
 
-      <!-- 액션 & 필터 -->
       <div class="actions">
-        <button class="btn btn-primary" onclick="openModal()">
-          ➕ 새 챌린지 만들기
+        <button class="btn btn-primary" id="openCreateBtn">
+          버킷리스트 만들기
         </button>
         <div class="filter-tabs">
-          <button class="filter-btn active">전체</button>
-          <button class="filter-btn">진행 중</button>
-          <button class="filter-btn">완료</button>
+          <button class="filter-btn active" data-filter="all">전체</button>
+          <button class="filter-btn" data-filter="in-progress">진행</button>
+          <button class="filter-btn" data-filter="completed">완료</button>
         </div>
       </div>
 
-      <!-- 챌린지 그리드 -->
-      <div class="challenges-grid">
-        <div class="challenge-card">
-          <div class="challenge-card::before"></div>
-          <div class="challenge-header">
-            <div class="challenge-icon">☕</div>
-            <div class="challenge-status active">● 진행 중</div>
-          </div>
-          <h3 class="challenge-title">카페 탐방가</h3>
-          <p class="challenge-description">
-            전국의 특색있는 카페 20곳을 방문하고 각 카페의 시그니처 메뉴를
-            경험해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">12 / 20</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 60%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.06.01 시작</span>
-            <span>🏆 3명 참여 중</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">📍 추천 장소</button>
-            <button class="challenge-action-btn">📊 상세 보기</button>
-          </div>
-        </div>
-
-        <div class="challenge-card">
-          <div class="challenge-header">
-            <div class="challenge-icon">🍽️</div>
-            <div class="challenge-status active">● 진행 중</div>
-          </div>
-          <h3 class="challenge-title">미식가의 여정</h3>
-          <p class="challenge-description">
-            미슐랭 가이드 추천 맛집 50곳을 방문하고 각 음식의 특징을
-            기록해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">34 / 50</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 68%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.03.15 시작</span>
-            <span>🏆 혼자 도전</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">📍 추천 장소</button>
-            <button class="challenge-action-btn">📊 상세 보기</button>
-          </div>
-        </div>
-
-        <div class="challenge-card">
-          <div class="challenge-header">
-            <div class="challenge-icon">📸</div>
-            <div class="challenge-status completed">✓ 완료</div>
-          </div>
-          <h3 class="challenge-title">포토그래퍼</h3>
-          <p class="challenge-description">
-            인생샷을 남길 수 있는 명소 100곳에서 사진을 촬영해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">100 / 100</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 100%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.01.01 완료</span>
-            <span>🏆 2명 참여</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">🎉 결과 보기</button>
-            <button class="challenge-action-btn">🔄 다시 시작</button>
-          </div>
-        </div>
-
-        <div class="challenge-card">
-          <div class="challenge-header">
-            <div class="challenge-icon">🏛️</div>
-            <div class="challenge-status active">● 진행 중</div>
-          </div>
-          <h3 class="challenge-title">역사 탐험가</h3>
-          <p class="challenge-description">
-            대한민국의 주요 문화재와 역사 유적지 30곳을 방문해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">8 / 30</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 27%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.09.01 시작</span>
-            <span>🏆 5명 참여 중</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">📍 추천 장소</button>
-            <button class="challenge-action-btn">📊 상세 보기</button>
-          </div>
-        </div>
-
-        <div class="challenge-card">
-          <div class="challenge-header">
-            <div class="challenge-icon">🏖️</div>
-            <div class="challenge-status active">● 진행 중</div>
-          </div>
-          <h3 class="challenge-title">해변 컬렉터</h3>
-          <p class="challenge-description">
-            전국의 아름다운 해변 15곳을 방문하고 각 해변의 특색을 기록해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">6 / 15</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 40%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.07.20 시작</span>
-            <span>🏆 혼자 도전</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">📍 추천 장소</button>
-            <button class="challenge-action-btn">📊 상세 보기</button>
-          </div>
-        </div>
-
-        <div class="challenge-card">
-          <div class="challenge-header">
-            <div class="challenge-icon">🎨</div>
-            <div class="challenge-status paused">⏸ 일시중지</div>
-          </div>
-          <h3 class="challenge-title">예술 애호가</h3>
-          <p class="challenge-description">
-            국내 주요 미술관과 박물관 25곳을 방문하고 전시회를 관람해보세요
-          </p>
-          <div class="challenge-progress-section">
-            <div class="progress-header">
-              <span class="progress-label">달성률</span>
-              <span class="progress-value">11 / 25</span>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" style="width: 44%"></div>
-            </div>
-          </div>
-          <div class="challenge-meta">
-            <span>📅 2024.05.10 일시중지</span>
-            <span>🏆 혼자 도전</span>
-          </div>
-          <div class="challenge-actions">
-            <button class="challenge-action-btn">▶️ 재개</button>
-            <button class="challenge-action-btn">📊 상세 보기</button>
-          </div>
-        </div>
+      <div id="bucketlistGrid" class="challenges-grid"></div>
+      <div id="bucketlistEmpty" class="empty-state" style="display: none">
+        아직 등록된 버킷리스트가 없습니다. 새로 만들어보세요.
       </div>
     </div>
 
-    <!-- 새 챌린지 모달 -->
-    <div class="modal" id="newChallengeModal">
+    <div class="modal" id="newBucketModal">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 class="modal-title">새 챌린지 만들기</h2>
-          <button class="modal-close" onclick="closeModal()">×</button>
+          <h2 class="modal-title">버킷리스트 만들기</h2>
+          <button class="modal-close" id="closeCreateBtn" type="button">
+            &times;
+          </button>
         </div>
 
-        <form id="challengeForm">
+        <form id="bucketForm">
           <div class="form-group">
-            <label>챌린지 이름</label>
-            <input type="text" placeholder="예: 부산 맛집 정복" required />
+            <label>버킷리스트 이름</label>
+            <input
+              type="text"
+              id="bucketTitle"
+              placeholder="제주 카페 투어"
+              required
+            />
           </div>
 
           <div class="form-group">
-            <label>카테고리</label>
-            <div class="category-grid">
-              <div class="category-option">
-                <div class="category-icon">☕</div>
-                <div class="category-name">카페</div>
-              </div>
-              <div class="category-option selected">
-                <div class="category-icon">🍽️</div>
-                <div class="category-name">맛집</div>
-              </div>
-              <div class="category-option">
-                <div class="category-icon">📸</div>
-                <div class="category-name">사진</div>
-              </div>
-              <div class="category-option">
-                <div class="category-icon">🏛️</div>
-                <div class="category-name">문화재</div>
-              </div>
-              <div class="category-option">
-                <div class="category-icon">🏖️</div>
-                <div class="category-name">해변</div>
-              </div>
-              <div class="category-option">
-                <div class="category-icon">🎨</div>
-                <div class="category-name">예술</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label>목표 개수</label>
-            <input type="number" placeholder="예: 20" min="1" required />
-          </div>
-
-          <div class="form-group">
-            <label>설명</label>
+            <label>설명 (선택)</label>
             <textarea
+              id="bucketDescription"
+              rows="3"
+              placeholder="목표를 자유롭게 적어주세요."
+            ></textarea>
+          </div>
+
+          <div class="form-group">
+            <label>테마/이모지 (선택)</label>
+            <input
+              type="text"
+              id="bucketTheme"
+              placeholder="🌊 바다/ 🏔️ 등산/ 🎡 나들이"
+            />
+          </div>
+
+          <div class="form-group">
+            <label>초기 체크리스트(선택, 줄바꿈으로 구분)</label>
+            <textarea
+              id="initialItems"
               rows="4"
-              placeholder="챌린지에 대한 설명을 작성해주세요"
+              placeholder="비행기 예약&#10;맛집 리스트 정리&#10;부모님이랑 추억 남기기"
             ></textarea>
           </div>
 
@@ -299,26 +114,56 @@
             class="btn btn-primary"
             style="width: 100%; padding: 16px"
           >
-            ✨ 챌린지 만들기
+            만들기
           </button>
         </form>
       </div>
     </div>
+
+    <div class="modal" id="bucketDetailModal">
+      <div class="modal-content detail-modal">
+        <div class="modal-header">
+          <div class="detail-header">
+            <p class="detail-status" id="detailStatus">진행</p>
+            <h2 class="modal-title" id="detailTitle"></h2>
+            <p class="detail-description" id="detailDescription"></p>
+          </div>
+          <button class="modal-close" id="closeDetailBtn" type="button">
+            &times;
+          </button>
+        </div>
+
+        <div class="progress-section">
+          <div class="progress-header">
+            <span class="progress-label">진행률</span>
+            <span class="progress-value" id="detailCount">0/0</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" id="detailProgressFill"></div>
+          </div>
+        </div>
+
+        <div class="item-input-row">
+          <input
+            type="text"
+            id="newItemInput"
+            placeholder="새 체크리스트를 입력하세요"
+          />
+          <button class="btn btn-primary" type="button" id="addItemBtn">
+            추가
+          </button>
+        </div>
+
+        <ul class="item-list" id="bucketItems"></ul>
+
+        <div class="detail-actions">
+          <button class="btn btn-secondary delete-btn" id="deleteBucketBtn">
+            버킷리스트 삭제
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="./pages/Bucketlist.mjs"></script>
-    <script>
-      // 모달 열기
-      function openModal() {
-        document.getElementById("newChallengeModal").classList.add("show");
-      }
-
-      // 모달 닫기
-      function closeModal() {
-        document.getElementById("newChallengeModal").classList.remove("show");
-      }
-
-      function goHome() {
-        alert("대시보드로 이동합니다!");
-      }
-    </script>
   </body>
 </html>
