--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -53,6 +53,7 @@
             <div class="action-buttons">
                 <button
                     class="btn btn-primary"
+                    id="create-new-trip-btn"
                     onclick="location.href='main.html'"
                 >
                     ✨ 새 여행 만들기
