stats 정상작동 확인

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,6 +33,11 @@
                     <div class="stat-label">전체 여행</div>
                 </div>
                 <div class="stat-card">
+                    <div class="stat-icon">📍</div>
+                    <div class="stat-value planningTrips"></div>
+                    <div class="stat-label">계획중인 여행</div>
+                </div>
+                <div class="stat-card">
                     <div class="stat-icon">✅</div>
                     <div class="stat-value completedTrips"></div>
                     <div class="stat-label">완료한 여행</div>
@@ -41,11 +46,6 @@
                     <div class="stat-icon">🎯</div>
                     <div class="stat-value achivedBucket"></div>
                     <div class="stat-label">달성한 챌린지</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon">📍</div>
-                    <div class="stat-value visitedPlaces"></div>
-                    <div class="stat-label">방문한 장소</div>
                 </div>
             </div>
 
