버킷리스트 완성

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -95,7 +95,7 @@
     <!-- 공통 알림용 (임시) -->
     <script>
       function showAllChallenges() {
-        alert("전체 챌린지 페이지로 이동합니다.");
+        window.location.href = "/bucketlist.html";
       }
     </script>
   </body>
