--- a/public/profile.html
+++ b/public/profile.html
@@ -35,11 +35,11 @@
                     <div class="profile-stats">
                         <div class="profile-stat">
                             <div class="profile-stat-value">12</div>
-                            <div class="profile-stat-label">여행</div>
+                            <div class="profile-stat-label">전체 여행</div>
                         </div>
                         <div class="profile-stat">
                             <div class="profile-stat-value">127</div>
-                            <div class="profile-stat-label">장소</div>
+                            <div class="profile-stat-label">간 여행</div>
                         </div>
                         <div class="profile-stat">
                             <div class="profile-stat-value">45</div>
@@ -54,9 +54,9 @@
                 <button class="tab-btn active" data-tab="account">
                     계정 정보
                 </button>
-                <button class="tab-btn" data-tab="history">
+                <!-- <button class="tab-btn" data-tab="history">
                     여행 히스토리
-                </button>
+                </button> -->
             </div>
 
             <!-- 계정 정보 탭 -->
@@ -154,12 +154,12 @@
             </div>
 
             <!-- 여행 히스토리 탭 -->
-            <div class="tab-content" id="historyTab" style="display: none">
+            <!-- <div class="tab-content" id="historyTab" style="display: none">
                 <div class="settings-card">
                     <h2 class="card-title">📅 최근 여행</h2>
                     <div class="trip-history" id="tripHistoryContainer"></div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <script type="module" src="./pages/Profile.mjs"></script>
         <script>
