경로 생성 막는 알림 꾸밈

--- a/public/main.html
+++ b/public/main.html
@@ -576,6 +576,23 @@
       </div>
     </div>
 
+    <div id="guide-modal" class="modal hidden">
+      <div class="modal-backdrop"></div>
+      <div class="modal-box">
+        <h3>여행 선택 안내</h3>
+        <p>
+          <strong>내 여행</strong> 페이지에서<br />
+          <strong>계획 중인 여행</strong>을 선택해주세요.
+        </p>
+        <p class="hint">
+          상단 메뉴 → <b>내 여행</b><br />
+          중단 → <b>계획 중</b><br />
+          플랜 카드 클릭
+        </p>
+        <button id="modal-ok">확인</button>
+      </div>
+    </div>
+
     <script type="module" src="./pages/Main.mjs"></script>
     <script>
       fetch("navbar.html")
