--- a/public/login.html
+++ b/public/login.html
@@ -39,13 +39,13 @@
           />
         </div>
 
-        <div class="form-options">
-          <!-- <label class="remember-me">
+        <!-- <div class="form-options">
+          <label class="remember-me">
             <input type="checkbox" id="rememberMe" />
             <span>로그인 상태 유지</span>
-          </label> -->
+          </label>
           <a href="#" class="forgot-password">비밀번호 찾기</a>
-        </div>
+        </div> -->
 
         <button type="submit" class="btn-login">로그인</button>
       </form>
