--- a/public/profile.html
+++ b/public/profile.html
@@ -11,7 +11,7 @@
         <div id="navbar"></div>
 
         <script type="module">
-            import { loadNavbar } from "./js/navbar.js";
+            import { loadNavbar } from "./utils/navbar.js";
             loadNavbar();
         </script>
 
