--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,178 +1,180 @@
 <style>
-  .navbar {
-    background: #87ceeb;
-    color: white;
-    padding: 16px 32px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-  }
+    .navbar {
+        background: #87ceeb;
+        color: white;
+        padding: 16px 32px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        position: relative;
+    }
 
-  .navbar-left {
-    display: flex;
-    align-items: center;
-    gap: 32px;
-  }
+    .navbar-left {
+        display: flex;
+        align-items: center;
+        gap: 32px;
+    }
 
-  .logo {
-    font-size: 24px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    cursor: pointer;
-  }
+    .logo {
+        font-size: 24px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        cursor: pointer;
+    }
 
-  .nav-links {
-    display: flex;
-    gap: 24px;
-  }
+    .nav-links {
+        display: flex;
+        gap: 24px;
+    }
 
-  .nav-link {
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
-    padding: 0.8rem 1rem;
-    border-radius: 8px;
-    transition: all 0.3s;
-    opacity: 0.9;
-  }
+    .nav-link {
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        padding: 0.8rem 1rem;
+        border-radius: 8px;
+        transition: all 0.3s;
+        opacity: 0.9;
+    }
 
-  .nav-link:hover {
-    background: rgba(255, 255, 255, 0.2);
-    opacity: 1;
-  }
+    .nav-link:hover {
+        background: rgba(255, 255, 255, 0.2);
+        opacity: 1;
+    }
 
-  .nav-link.active {
-    background: rgba(255, 255, 255, 0.25);
-    opacity: 1;
-  }
+    .nav-link.active {
+        background: rgba(255, 255, 255, 0.25);
+        opacity: 1;
+    }
 
-  .navbar-right {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    position: relative;
-  }
+    .navbar-right {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        position: relative;
+    }
 
-  .user-profile {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    cursor: pointer;
-    padding: 8px 16px;
-    border-radius: 12px;
-    transition: all 0.3s;
-  }
+    .user-profile {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        cursor: pointer;
+        padding: 8px 16px;
+        border-radius: 12px;
+        transition: all 0.3s;
+    }
 
-  .user-profile:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
+    .user-profile:hover {
+        background: rgba(255, 255, 255, 0.2);
+    }
 
-  .user-avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    overflow: hidden;
-  }
+    .user-avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        overflow: hidden;
+    }
 
-  .user-info {
-    text-align: right;
-    line-height: 1.2;
-  }
+    .user-info {
+        text-align: right;
+        line-height: 1.2;
+    }
 
-  .user-name {
-    font-weight: 600;
-    font-size: 14px;
-  }
+    .user-name {
+        font-weight: 600;
+        font-size: 14px;
+    }
 
-  .user-email {
-    font-size: 12px;
-    opacity: 0.85;
-  }
+    .user-email {
+        font-size: 12px;
+        opacity: 0.85;
+    }
 
-  .user-dropdown {
-    position: absolute;
-    top: 64px;
-    right: 0;
-    background: white;
-    border-radius: 12px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-    width: 160px;
-    display: none;
-    flex-direction: column;
-    overflow: hidden;
-    z-index: 1000;
-  }
+    .user-dropdown {
+        position: absolute;
+        top: 64px;
+        right: 0;
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+        width: 160px;
+        display: none;
+        flex-direction: column;
+        overflow: hidden;
+        z-index: 1000;
+    }
 
-  .dropdown-item {
-    padding: 12px 16px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background 0.2s;
-    color: #111827;
-  }
+    .dropdown-item {
+        padding: 12px 16px;
+        cursor: pointer;
+        font-size: 14px;
+        transition: background 0.2s;
+        color: #111827;
+    }
 
-  .dropdown-item:hover {
-    background: #f1f5f9;
-  }
+    .dropdown-item:hover {
+        background: #f1f5f9;
+    }
 
-  .dropdown-item.logout {
-    color: #ef4444;
-    font-weight: 600;
-  }
+    .dropdown-item.logout {
+        color: #ef4444;
+        font-weight: 600;
+    }
 </style>
 <nav class="navbar">
-  <div class="navbar-left">
-    <div class="logo" onclick="location.href='dashboard.html'">
-      🗺️ TripCanvas
-    </div>
-    <div class="nav-links">
-      <a href="dashboard.html" class="nav-link" id="nav-main">내 여행</a>
-      <a href="bucketlist.html" class="nav-link" id="nav-bucketlist">
-        버킷리스트
-      </a>
-    </div>
-  </div>
-
-  <div class="navbar-right">
-    <button
-      id="invite-btn"
-      class="btn-invite"
-      style="
-        display: none;
-        background: var(--primary);
-        color: white;
-        border: none;
-        border-radius: 8px;
-        padding: 10px 20px;
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-      "
-    >
-      + 초대하기
-    </button>
-    <div class="user-profile" id="userProfile">
-      <div class="user-avatar" id="navAvatar">🧑</div>
-      <div class="user-info">
-        <div class="user-name"></div>
-        <div class="user-email"></div>
-      </div>
+    <div class="navbar-left">
+        <div class="logo" onclick="location.href='dashboard.html'">
+            🗺️ TripCanvas
+        </div>
+        <div class="nav-links">
+            <a href="dashboard.html" class="nav-link" id="nav-dashboard"
+                >내 여행</a
+            >
+            <a href="bucketlist.html" class="nav-link" id="nav-bucketlist">
+                버킷리스트
+            </a>
+        </div>
     </div>
 
-    <div class="user-dropdown" id="userDropdown">
-      <div class="dropdown-item" id="profileBtn">👤 프로필</div>
-      <div class="dropdown-item logout" id="logoutBtn">🚪 로그아웃</div>
-    </div>
-  </div>
+    <div class="navbar-right">
+        <button
+            id="invite-btn"
+            class="btn-invite"
+            style="
+                display: none;
+                background: var(--primary);
+                color: white;
+                border: none;
+                border-radius: 8px;
+                padding: 10px 20px;
+                font-size: 16px;
+                font-weight: bold;
+                cursor: pointer;
+            "
+        >
+            + 초대하기
+        </button>
+        <div class="user-profile" id="userProfile">
+            <div class="user-avatar" id="navAvatar">🧑</div>
+            <div class="user-info">
+                <div class="user-name"></div>
+                <div class="user-email"></div>
+            </div>
+        </div>
 
-  <!-- Navbar scripts are loaded via ./js/navbar.js (loadNavbar) -->
+        <div class="user-dropdown" id="userDropdown">
+            <div class="dropdown-item" id="profileBtn">👤 프로필</div>
+            <div class="dropdown-item logout" id="logoutBtn">🚪 로그아웃</div>
+        </div>
+    </div>
+
+    <!-- Navbar scripts are loaded via ./utils/navbar.js (loadNavbar) -->
 </nav>
